# tauri-windows-service

./: .gitignore  README.md
nym-vpn-app/: build.ps1  myapp.key  myapp.key.pub  package-lock.json  package.json
nym-vpn-app/src/: App.tsx
nym-vpn-app/src-tauri/: Cargo.toml  tauri.conf.json
nym-vpn-app/src-tauri/src/: main.rs
nym-vpn-app/src-tauri/windows/: installer.nsi  service.wxs
nym-vpn-service/: Cargo.toml
nym-vpn-service/src/: daemon.rs  install.rs  main.rs
