[package]
name = "nym-vpn-daemon"
description = "NymVPN daemon that creates and runs tunnels to the Nym network"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["time", "rt-multi-thread", "sync", "net"] }
axum = { version = "0.7.4" }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
log = "0.4.21"
anyhow = "1.0.81"
tower-http = { version = "0.5.2", features = ["cors"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"
eventlog = "0.2.2"
winapi = { version = "0.3", features = ["winnt", "excpt"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
]

[package.metadata.winres]
ProductName = "NymVPN"
CompanyName = "Nym Technologies SA"
LegalCopyright = "Copyright (c) Nym Technologies SA 2024"
InternalName = "nymvpn-daemon"
OriginalFilename = "nymvpn-daemon.exe"
